--- a/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_item-grid.scss
@@ -98,7 +98,7 @@ div.collection-grid {
         text-decoration: none;
         color: #fff;
         position: relative;
-        top: -34px;
+        top: -30px;
       }
     }
   }
